[gd_scene load_steps=19 format=2]

[ext_resource path="res://title_screen/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Main Menu Resources/space_stars_sky_night_116649_1280x720.jpg" type="Texture" id=2]
[ext_resource path="res://Main Menu Resources/Earth Icon.png" type="Texture" id=3]
[ext_resource path="res://Main Menu Resources/Moon Texture.png" type="Texture" id=4]
[ext_resource path="res://Main Menu Resources/Characters.png" type="Texture" id=5]
[ext_resource path="res://title_screen/Buttons/NewGameBut.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main Menu Resources/New Game - Unselected.png" type="Texture" id=7]
[ext_resource path="res://Main Menu Resources/New Game - Selected.png" type="Texture" id=8]
[ext_resource path="res://title_screen/Buttons/ContinueBut.tscn" type="PackedScene" id=9]
[ext_resource path="res://Main Menu Resources/Continue Game unselected.png" type="Texture" id=10]
[ext_resource path="res://Main Menu Resources/Continue Game Selected.png" type="Texture" id=11]
[ext_resource path="res://title_screen/Buttons/How To Play Button.tscn" type="PackedScene" id=12]
[ext_resource path="res://Main Menu Resources/How to PLay - Unselected.png" type="Texture" id=13]
[ext_resource path="res://Main Menu Resources/How to play - Selected.png" type="Texture" id=14]
[ext_resource path="res://title_screen/Buttons/SettingsBut.tscn" type="PackedScene" id=15]
[ext_resource path="res://Main Menu Resources/Settings - Unselected.png" type="Texture" id=16]
[ext_resource path="res://Main Menu Resources/Settings selected.png" type="Texture" id=17]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=18]

[node name="Title Screen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="space_stars_sky_night_116649_1280x720" type="Sprite" parent="Menu" index="0"]

position = Vector2( 522.309, 280.117 )
texture = ExtResource( 2 )

[node name="Earth Icon" type="Sprite" parent="Menu" index="1"]

position = Vector2( 606.615, 81.0035 )
scale = Vector2( 0.571127, 0.586856 )
texture = ExtResource( 3 )

[node name="Moon Texture" type="Sprite" parent="Menu" index="2"]

position = Vector2( 759.596, 537.041 )
scale = Vector2( 0.842299, 0.551655 )
texture = ExtResource( 4 )

[node name="Characters" type="Sprite" parent="Menu" index="3"]

position = Vector2( 726.48, 473.066 )
scale = Vector2( 0.524352, 0.497892 )
texture = ExtResource( 5 )

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1040.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="MainButtons" type="VBoxContainer" parent="Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1040.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="NewGameBut" parent="Menu/CenterRow/MainButtons" index="0" instance=ExtResource( 6 )]

margin_top = 192.0
margin_bottom = 224.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
scene_to_load = "res://MainGame.tscn"

[node name="ContinueBut" parent="Menu/CenterRow/MainButtons" index="1" instance=ExtResource( 9 )]

margin_top = 240.0
margin_bottom = 272.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="How To Play Button" parent="Menu/CenterRow/MainButtons" index="2" instance=ExtResource( 12 )]

margin_top = 288.0
margin_bottom = 320.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 14 )
scene_to_load = "res://game/HowToPlay.tscn"

[node name="SettingsBut" parent="Menu/CenterRow/MainButtons" index="3" instance=ExtResource( 15 )]

margin_top = 336.0
margin_bottom = 368.0
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="FadeIn" parent="." index="1" instance=ExtResource( 18 )]

visible = false

[connection signal="fade_finished" from="FadeIn" to="." method="_on_TransitionFX_fade_finished"]


